@@ -96,7 +96,6 @@
             "      --no-html		do not build HTML help",
             "      --latex      	install LaTeX help",
             "      --example		install R code for help examples",
-            "      --use-zip-data	collect data files in zip archive (deprecated)",
             "      --fake		do minimal install for testing purposes",
             "      --no-lock, --unsafe",
             "			install on top of any existing installation",
@@ -120,7 +119,6 @@
             "      --configure-vars=VARS",
             "			set variables for the configure scripts (if any)",
             "\nand on Windows only",
-            "      --auto-zip	select whether to zip data automatically (deprecated)",
             "      --force-biarch	attempt to build both architectures",
             "			even if there is a non-empty configure.win",
             "      --merge-multiarch	bi-arch by merging",
@@ -542,24 +540,6 @@
 
         if (preclean) run_clean()
 
-        if (auto_zip || zip_up) { ## --build implies --auto-zip
-            thislazy <- parse_description_field(desc, "LazyData",
-                                                default = lazy_data)
-            ## This allows ZipData: no to override --auto-zip
-            thiszip <- parse_description_field(desc, "ZipData",
-                                               default = TRUE)
-            if (!thislazy && thiszip && dir.exists("data")) {
-                fi <- file.info(dir("data", full.names=TRUE))
-                if (sum(fi$size) > 100000) {
-                    this <- sub("\\.[a-zA-Z]+$", "", row.names(fi))
-                    if (!anyDuplicated(this)) use_zip_data <- TRUE
-                }
-                if (use_zip_data)
-                     message("\n  Using auto-selected zip option ",
-                             sQuote("--use-zip-data"), "\n", domain = NA)
-            }
-        }
-
         if (use_configure) {
             if (WINDOWS) {
                 if (file.exists("configure.win")) {
@@ -832,9 +812,6 @@
 		file.copy(files, is, TRUE)
 		thislazy <- parse_description_field(desc, "LazyData",
 						    default = lazy_data)
-                if(!thislazy && !use_zip_data) {
-                    use_zip_data <- parse_description_field(desc, "ZipData",
-                                                            default = FALSE)
                     if(use_zip_data)
                         warning("use of a true value for 'ZipData' is deprecated", call. = FALSE, domain=NA)
                 }
@@ -862,14 +839,6 @@
 					       compress = data_compress))
 		    if (inherits(res, "try-error"))
 			pkgerrmsg("lazydata failed", pkg_name)
-		} else if (use_zip_data &&
-			   (WINDOWS ||
-			   (nzchar(Sys.getenv("R_UNZIPCMD")) &&
-			   nzchar(zip <- Sys.getenv("R_ZIPCMD"))) )) {
-		    owd <- setwd(file.path(instdir, "data"))
-		    writeLines(dir(), "filelist")
-		    system(paste(zip, "-q -m Rdata * -x filelist 00Index"))
-		    setwd(owd)
 		}
 	    } else warning("empty 'data' directory", call. = FALSE)
 	}
@@ -1012,7 +981,6 @@
     build_latex <- FALSE
     build_example <- FALSE
     use_configure <- TRUE
-    use_zip_data <- FALSE
     auto_zip <- FALSE
     configure_args <- character(0)
     configure_vars <- character(0)
@@ -1080,15 +1048,12 @@
         } else if (a == "--example") {
             build_example <- TRUE
         } else if (a == "--use-zip-data") {
-            use_zip_data <- TRUE
+            warning("use of '--use-zip-data' is defunct",
+                    call. = FALSE, domain = NA)
             warning("use of '--use-zip-data' is deprecated",
                     call. = FALSE, domain = NA)
         } else if (a == "--auto-zip") {
-            if (WINDOWS) {
-                auto_zip <- TRUE
-                warning("use of '--auto-zip' is deprecated",
-                        call. = FALSE, domain = NA)
-            } else warning("'--auto-zip' is for Windows only",
+            warning("'--auto-zip' is defunct",
                            call. = FALSE, domain = NA)
         } else if (a == "-l") {
             if (length(args) >= 2L) {lib <- args[2L]; args <- args[-1L]}
